updated pomolo about

--- a/aboutme.html
+++ b/aboutme.html
@@ -270,15 +270,15 @@
                   <div class="column" class="img-fluid">
                     <div class="image">
                       <img src="assets/img/things/quotes.jpg" class="img-fluid" alt="" style="border-radius:10px;">
-                      <div class="books-middle"> INTERESTS </div>
+                      <div class="books-middle"> SPEECHES </div>
                       <!-- <div class="image_overlay">
                           <div class="image_title2">BOOKS</div>
                       </div> -->
                       <div class="books-list"> 
-                        <ol>        
-                          <li> Architecture </li>                             
-                          <li> Traveling </li>  
-                          <li> Animal Welfare </li>
+                        <ol>                               
+                          <li> Sam Berns, "My Philosophy <br> for a Happy Life" </li>  
+                          <li> John W. Gardner, "Personal Renewal" </li>
+                          <li> David Goggins, "2018 VFW Americanism Award" </li>
                         </ol> 
                       </div>
                       <div class="image_overlay2">
