updated pomolo about

--- a/aboutme.html
+++ b/aboutme.html
@@ -184,7 +184,7 @@
           <!-- ========== Added books/movies/etc ========== -->
           <div class="instagram-container">
             <div class="instagram-title-box">
-              <div class="books-titleNL" style="margin-bottom:10px"> To give you a better idea of who I am: </div>
+              <div class="books-titleNL" style="margin-bottom:10px"> Few of my favorite things: </div>
             </div>
             <div class="row">
               <section id="portfolio" class="portfolio" style="margin-bottom:-90px">
