updated pomolo about

--- a/aboutme.html
+++ b/aboutme.html
@@ -235,7 +235,7 @@
                         <ol>
                           <li> Harry Potter Series</li>
                           <li> Pursuit of Happyness </li>
-                          <li> Stand by Me </li>
+                          <li> Avatar </li>
                         </ol>
                       </div>
                       <div class="image_overlay2">
