updated pomolo about

--- a/aboutme.html
+++ b/aboutme.html
@@ -198,7 +198,7 @@
                         <ol>
                           <li> Strength-training </li>
                           <li> Listening to music </li>
-                          <li> Anything active or sports-related </li>
+                          <li> Anything outdoors! </li>
                         </ol>
                       </div>
                       <div class="image_overlay2">
