--- a/aboutme.html
+++ b/aboutme.html
@@ -233,7 +233,7 @@
                       <div class="books-middle"> FILMS </div>
                       <div class="books-list">
                         <ol>
-                          <li> Harry Potter Series</li>
+                          <li> Harry Potter Series </li>
                           <li> Pursuit of Happyness </li>
                           <li> Avatar </li>
                         </ol>
@@ -258,7 +258,7 @@
                         <ol>
                           <li> On Purpose with Jay Shetty </li>    
                           <li> Radiolab </li>   
-                          <li> WorkLife</li>                    
+                          <li> Hidden Brain </li>                    
                         </ol>
                       </div>
                       <div class="image_overlay2">
