--- a/index.html
+++ b/index.html
@@ -164,8 +164,8 @@
               <div class="image" >
                 <img src="assets/img/proj_bala/cover.png" style="border-radius:10px;" class="img-fluid" alt="">
                 <div class="image_overlay2">
-                    <div class="image_title"> 🔒 Bala Bangles </div>
-                    <p class="image_description"> Mobile, User Research, UX, Visual Design
+                    <div class="image_title"> Content Redesign for <br> Bala Bangles </div>
+                    <p class="image_description"> Content Strategy, UX, VD, Concept
                     </p>
                 </div>
               </div>
@@ -179,8 +179,8 @@
               <div class="image" >
                 <img src="assets/img/proj_chipotle/cover.png" style="border-radius:10px;" class="img-fluid" alt="">
                 <div class="image_overlay2">
-                    <div class="image_title"> 🔒 Chipotle Redesign </div>
-                    <p class="image_description"> Mobile, User Research, UX, Visual Design
+                    <div class="image_title"> Redesign for Chipotle </div>
+                    <p class="image_description"> Mobile, UX, VD, Concept
                     </p>
                 </div>
               </div>
@@ -194,8 +194,8 @@
               <div class="image">
                 <img src="assets/img/portfolio/pomolo_2.png" style="border-radius:10px;" class="img-fluid" alt="">
                 <div class="image_overlay2">
-                    <div class="image_title"> 🔒 Pomolo </div>
-                    <p class="image_description"> Mobile Design, User Research, UX, Visual Design
+                    <div class="image_title"> Pomolo </div>
+                    <p class="image_description"> Mobile, UX, VD, Concept
                 </div>
               </div>
             </a>
@@ -213,12 +213,12 @@
 
           <!-- Proj 2 -->
           <div class="col-lg-4 col-md-6 portfolio-item" class="img-fluid">
-            <a href="password.html">
+            <a href="onboarding.html">
               <div class="image" >
                 <img src="assets/img/portfolio/pomolo.png" style="border-radius:10px;" class="img-fluid" alt="">
                 <div class="image_overlay2">
-                    <div class="image_title"> 🔒 Registration and Login <br> Experience </div>
-                    <p class="image_description"> Mobile, User Research, UX, Visual Design
+                    <div class="image_title"> Onboarding Experience <br> with Pomolo </div>
+                    <p class="image_description"> Mobile, UX, VD, Concept
                     </p>
                 </div>
               </div>
