--- a/onboarding.html
+++ b/onboarding.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title> Bala Bangles • IL </title>
+  <title> Onboarding Experience • IL </title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -105,8 +105,8 @@
           <div class="col-lg-10 col-lg-7 entries">
 
             <article class="entry entry-single">
-              <h2 class="title1" style="color: #E386AA">
-                Bala Bangles
+              <h2 class="title1">
+                Onboarding Experience
               </h2>
 
               <h2 class="subtitle1">
@@ -115,7 +115,7 @@
 
               <h2 class="subtitle2">
                 As a new design student under UCLA’s Extension program, I
-                was given the task of creating a login and signup feature for a
+                was given the task of creating a login and registration feature for a
                 focus tracking app to help students. 
               </h2>
 
