--- a/index.html
+++ b/index.html
@@ -129,8 +129,9 @@
       <h1> Hey there, I'm Irene! </h1>
 
       <!-- HEADER ROTATOR REMOVED STARTING HERE -->
-      <h3 > Computer science graduate from UC San Diego and 
-      designer creating digital experiences in Los Angeles, CA. </h3>
+      <h3 style="border:white 1px solid;"> 
+      Computer Science grad from UC San Diego fascinated in designing 
+      tools that can help individuals fulfill their health and wellness goals </h3>
 
       <div class="container" style="margin-left:0px; margin-top:20px;">
         <div class="row">
@@ -153,7 +154,7 @@
 
     <!-- ======= Portfolio Section ======= -->
     <section id="portfolio" class="portfolio">
-      <div class="container" style="width:80%;">
+      <div class="container" style="width:85%;">
         <br> <br>
         <div class="row portfolio-container">
 
@@ -164,7 +165,7 @@
               <div class="image" >
                 <img src="assets/img/proj_bala/cover.png" style="border-radius:10px;" class="img-fluid" alt="">
                 <div class="image_overlay2">
-                    <div class="image_title"> Content Redesign for <br> Bala Bangles </div>
+                    <div class="image_title"> Bala Bangles </div>
                     <p class="image_description"> Content Strategy, UX, VD, Concept
                     </p>
                 </div>
@@ -172,24 +173,8 @@
             </a>
           </div>
 
-
-          <!-- Chipotle redesign -->
-          <div class="col-lg-4 col-md-6 portfolio-item" class="img-fluid">
-            <a href="under_construction.html" target="blank">
-              <div class="image" >
-                <img src="assets/img/proj_chipotle/cover.png" style="border-radius:10px;" class="img-fluid" alt="">
-                <div class="image_overlay2">
-                    <div class="image_title"> Redesign for Chipotle </div>
-                    <p class="image_description"> Mobile, UX, VD, Concept
-                    </p>
-                </div>
-              </div>
-            </a>
-          </div>
-
-
           <!-- Proj 1: Covid-Code -->
-          <div class="col-lg-4 col-md-6 portfolio-item" class="img-fluid">
+          <!-- <div class="col-lg-4 col-md-6 portfolio-item" class="img-fluid">
             <a href="under_construction.html" target="blank">
               <div class="image">
                 <img src="assets/img/portfolio/pomolo_2.png" style="border-radius:10px;" class="img-fluid" alt="">
@@ -199,17 +184,8 @@
                 </div>
               </div>
             </a>
-          </div>
-            <!-- <div class="img-with-text"> 
-              <p> COVID-Code </p>
-            </div> -->
-            <!-- future: add swiping feature for each case study -->
-            <!-- <div class="portfolio-info">
-              <h4> COVID-Code </h4>
-              <p> Designing an iOS application capable of determining a user’s COVID-19 risk level and probability of contracting the virus. </p>
-              <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bi bi-three-dots"></i></a>
-            </div> 
           </div> -->
+
 
           <!-- Proj 2 -->
           <div class="col-lg-4 col-md-6 portfolio-item" class="img-fluid">
