--- a/onboarding.html
+++ b/onboarding.html
@@ -114,7 +114,7 @@
               </h2>
 
               <h2 class="subtitle2">
-                As a new design student under UCLA’s Extension program, I
+                As a new student under UCLA’s Extension program for UX Design, I
                 was given the task of creating a login and registration feature for a
                 focus tracking app to help students. 
               </h2>
