--- a/onboarding.html
+++ b/onboarding.html
@@ -134,7 +134,7 @@
                 <div class="case-details">                  
                   <h2 class="case-details"> TIME <br> <br> - </h2>
                   <p class="case-details">
-                    Spring 2022 (April - June)
+                    Apr - Jun 2022
                   </p>
                 </div>
                 <!-- role -->
