removed extra bala sections

--- a/onboarding.html
+++ b/onboarding.html
@@ -1017,8 +1017,7 @@
 
                 <h3 style="margin-top:10%;"> TAKEAWAYS </h3>
                 <p> 
-                  Wooo, we’ve reached the end! This was my first solo UX 
-                  case study, and
+                  This was my first solo UX case study, and
                   prior to this project, I thought I knew all the nuts and bolts 
                   to a successful registration and login experience. Little did 
                   I know, I'd embark on a journey that’d require 
