--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
               <div class="image" >
                 <img src="assets/img/portfolio/pomolo.png" style="border-radius:10px;" class="img-fluid" alt="">
                 <div class="image_overlay2">
-                    <div class="image_title"> Onboarding Experience <br> with Pomolo </div>
+                    <div class="image_title"> Onboarding Experience <br> With Pomolo </div>
                     <p class="image_description"> Mobile, UX, VD, Concept
                     </p>
                 </div>
