--- a/onboarding.html
+++ b/onboarding.html
@@ -106,7 +106,7 @@
 
             <article class="entry entry-single">
               <h2 class="title1">
-                Onboarding Experience
+                Onboarding Experience With Pomolo
               </h2>
 
               <h2 class="subtitle1">
