--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 
           <!-- Content Design  -->
           <div class="col-lg-4 col-md-6 portfolio-item" class="img-fluid">
-            <a href="under_construction.html" target="blank">
+            <a href="balabangles.html" target="blank">
               <div class="image" >
                 <img src="assets/img/proj_bala/cover.png" style="border-radius:10px;" class="img-fluid" alt="">
                 <div class="image_overlay2">
