--- a/aboutme.html
+++ b/aboutme.html
@@ -203,7 +203,7 @@
                         </ol>
                       </div>
                       <div class="image_overlay2">
-                        <div class="image_title3">🤍</div>
+                        <div class="image_title3">🙌</div>
                       </div>
                     </div>
                   </div>
@@ -263,7 +263,7 @@
                         </ol>
                       </div>
                       <div class="image_overlay2">
-                        <div class="image_title3">💡</div>
+                        <div class="image_title3">🎧</div>
                       </div>
                     </div>
                   </div>
@@ -283,7 +283,7 @@
                         </ol> 
                       </div>
                       <div class="image_overlay2">
-                        <div class="image_title3">🌎</div>
+                        <div class="image_title3">💬</div>
                       </div>
                     </div>
                   </div>
