--- a/index.html
+++ b/index.html
@@ -130,8 +130,10 @@
 
       <!-- HEADER ROTATOR REMOVED STARTING HERE -->
       <h3 style="border:white 1px solid;"> 
-      Computer Science grad from UC San Diego fascinated in designing 
-      tools that can help individuals fulfill their health and wellness goals </h3>
+      Computer Science graduate from UC San Diego transforming
+      digital experiences in the health and wellness space with the intent to
+      learn and inspire
+      </h3>
 
       <div class="container" style="margin-left:0px; margin-top:20px;">
         <div class="row">
