--- a/index.html
+++ b/index.html
@@ -130,9 +130,8 @@
 
       <!-- HEADER ROTATOR REMOVED STARTING HERE -->
       <h3 style="border:white 1px solid;"> 
-      Computer Science graduate from UC San Diego transforming
-      digital experiences in the health and wellness space with the intent to
-      learn and inspire
+      UX designer striving to deliver simple, thought-fully crafted solutions 
+      with the intent to learn, inspire, and improve lives
       </h3>
 
       <div class="container" style="margin-left:0px; margin-top:20px;">
