--- a/aboutme.html
+++ b/aboutme.html
@@ -185,7 +185,7 @@
           <!-- ========== Added books/movies/etc ========== -->
           <div class="instagram-container">
             <div class="instagram-title-box">
-              <div class="books-titleNL" style="margin-bottom:10px"> Few of my favorite things: </div>
+              <div class="books-titleNL" style="margin-bottom:10px"> My Favorite </div>
             </div>
             <div class="row">
               <section id="portfolio" class="portfolio" style="margin-bottom:-90px">
@@ -194,11 +194,11 @@
                   <div class="column" class="img-fluid">
                     <div class="image">
                       <img src="assets/img/things/hobbies.jpg" class="img-fluid" alt="" style="border-radius:10px;">             
-                      <div class="books-middle"> HOBBIES </div>
+                      <div class="books-middle"> ACTIVITIES </div>
                       <div class="books-list">
                         <ol>
                           <li> Strength-training </li>
-                          <li> Listening to music </li>
+                          <li> Reading </li>
                           <li> Anything outdoors! </li>
                         </ol>
                       </div>
