--- a/aboutme.html
+++ b/aboutme.html
@@ -92,8 +92,8 @@
     <!-- ======= About Section ======= -->
     <section id="about" class="about">  
       <div class="container">
-        <div class="row content">
-          <div class="col-lg-5 col-md-9 mx-auto" style="height:100%;">
+        <div class="row content" style="border:white 1px solid;">
+          <div class="col-lg-5 mx-auto" style="position: relative; border:white 1px solid; height:100%;">
             <!-- added profile picture -->
   
               <div class="row-fluid">
@@ -108,14 +108,15 @@
    
           </div> 
 
-          <div class="col-lg-6 mx-auto" style="border:solid white 1px; margin:auto;"> 
+          <div class="col-lg-6 mx-auto" style="position:relative; border:solid white 1px; margin:auto;"> 
             <div class="container">
               <div class="about-title2">
                 About Irene 
               </div>
               <div class ="about-paragraph2">
-                Nice to meet you! I’m a Computer Science 
-                graduate from UC San Diego and UX designer in training. I'm 
+                Computer Science 
+                graduate from UC San Diego and UX designer based in
+                Los Angeles, CA. I'm 
                 currently studying under UCLA's Extension program for UX Design 
                 and working on projects within the health and wellness space.
                 </div>
@@ -123,7 +124,7 @@
               <div class = "about-paragraph2">
                 Because I’m always eager to learn and challenge my limits, my 
                 interests lie within self-development and understanding habit
-                formations. I believe in designing simple yet long-lasting 
+                formations. I'm passionate about designing simple, thought-fully crafted
                 solutions that can transform the way people live by helping them
                 overcome barriers and fulfill personal goals.
                 </div>
@@ -150,42 +151,12 @@
             </div>
           </div>
 
-          <!-- ========== Added books, movies, learning ========== -->
-<!--           <div class="books-container1">
-            <div class="instagram-title-box">
-              <div class="books-title"> 3 BOOKS:  </div>
-            </div>
-            <div class ="books-paragraph">
-              1. Deep Work <br>
-              2. Atomic Habits <br>
-              3. Can't Hurt Me
-            </div>               
-          </div>
-          <div class="books-container2">
-            <div class="instagram-title-box">
-              <div class="books-title"> 3 MOVIES:  </div>
-            </div>
-            <div class ="books-paragraph">
-              1. E.T. <br>
-              2. Harry Potter <br>
-              3. From Up on Poppy Hill
-            </div>   
-          </div>
-          <div class="books-container3">
-            <div class="instagram-title-box">
-              <div class="books-title"> 3 THINGS I'M LEARNING:  </div>
-            </div>
-            <div class ="books-paragraph">
-              1. Home improvement <br>
-              2. Animation <br>
-              3. Taiwanese
-            </div>   
-          </div>  -->        
+          
 
           <!-- ========== Added books/movies/etc ========== -->
-          <div class="instagram-container">
+          <div class="instagram-container" style="border:white 1px solid;">
             <div class="instagram-title-box">
-              <div class="books-titleNL" style="margin-bottom:10px"> My Favorite </div>
+              <div class="books-titleNL" style="margin-bottom:10px"> Irene's Favorites </div>
             </div>
             <div class="row">
               <section id="portfolio" class="portfolio" style="margin-bottom:-90px">
@@ -401,7 +372,7 @@
 
         
           <!-- ========== Added Spotify ========== -->
-<!--           <div class="instagram-container">
+          <!--           <div class="instagram-container">
             <div class="instagram-title-box" style="margin-top:90px">
               <a class="instagram-title" href="https://open.spotify.com/user/lueirene" style="margin-top:0px" target="_blank" title="Spotify"> SPOTIFY </a>
             </div>
@@ -415,7 +386,7 @@
               <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/5ZkWwLZPasBbWyJdpVc5RK?utm_source=generator" width="99%" height="230" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>          
             </div>
           </div> -->
-          <!-- end of spotify container 
+          <!-- end of spotify container -->
 
           <!-- ========== Added books, movies, learning ========== -->
           <!-- <div class="books-container">
@@ -448,6 +419,7 @@
               3. Taiwanese
             </div>   
           </div> -->
+
         </div>
       </section> <!-- End About Section -->
   </main> <!-- End #main -->
