--- a/aboutme.html
+++ b/aboutme.html
@@ -111,8 +111,9 @@
           <div class="col-lg-6 mx-auto" style="position:relative; border:solid white 1px; margin:auto;"> 
             <div class="container">
               <div class="about-title2">
-                About Irene 
+                Irene Lue
               </div>
+              <hr style="border: 1.5px solid #0069b9; width:10%; margin-bottom:7%; margin-top:7%;">
               <div class ="about-paragraph2">
                 Computer Science 
                 graduate from UC San Diego and UX designer based in
@@ -156,7 +157,7 @@
           <!-- ========== Added books/movies/etc ========== -->
           <div class="instagram-container" style="border:white 1px solid;">
             <div class="instagram-title-box">
-              <div class="books-titleNL" style="margin-bottom:10px"> Irene's Favorites </div>
+              <div class="books-titleNL" style="margin-bottom:10px"> About Irene </div>
             </div>
             <div class="row">
               <section id="portfolio" class="portfolio" style="margin-bottom:-90px">
