--- a/aboutme.html
+++ b/aboutme.html
@@ -119,7 +119,7 @@
                 graduate from UC San Diego and UX designer based in
                 Los Angeles, CA. I'm 
                 currently studying under UCLA's Extension program for UX Design 
-                and working on projects within the health and wellness space.
+                and working on projects within mobile development and usability.
                 </div>
                 
               <div class = "about-paragraph2">
