--- a/aboutme.html
+++ b/aboutme.html
@@ -117,9 +117,7 @@
               <div class ="about-paragraph2">
                 Computer Science 
                 graduate from UC San Diego and UX designer based in
-                Los Angeles, CA. I'm 
-                currently studying under UCLA's Extension program for UX Design 
-                and working on projects within mobile development and usability.
+                Los Angeles, CA. currently studying under UCLA's Extension program for UX Design.
                 </div>
                 
               <div class = "about-paragraph2">
