--- a/aboutme.html
+++ b/aboutme.html
@@ -187,10 +187,12 @@
                     <div> 
                       <p>
                         Concept Development <br>
-                        Design Thinking <br>
-                        Information Architecture <br>
                         User Research <br>
-                        Wireframing <br>
+                        Prototyping <br>
+                        Testing <br>
+                        Ideation <br>
+                        Information Architecture <br>
+                        Content Design <br>
                       </p>
                     </div>
                   </div>
@@ -266,12 +268,12 @@
                   <div class="column" class="img-fluid">
                     <div class="image">
                       <img src="assets/img/things/hobbies.jpg" class="img-fluid" alt="" style="border-radius:10px;">             
-                      <div class="books-middle"> ACTIVITIES </div>
+                      <div class="books-middle"> HOBBIES </div>
                       <div class="books-list">
                         <ol>
                           <li> Strength-training </li>
-                          <li> Reading </li>
-                          <li> Anything outdoors! </li>
+                          <li> Listening to podcasts </li>
+                          <li> Exploring the outdoors </li>
                         </ol>
                       </div>
                       <div class="image_overlay2">
