--- a/aboutme.html
+++ b/aboutme.html
@@ -111,23 +111,20 @@
           <div class="col-lg-6 mx-auto" style="position:relative; border:solid white 1px; margin:auto;"> 
             <div class="container">
               <div class="about-title2">
-                Irene Lue
+                Hi there!
               </div>
               <hr style="border: 1.5px solid #0069b9; width:10%; margin-bottom:7%; margin-top:7%;">
+
               <div class ="about-paragraph2">
-                Computer Science 
-                graduate from UC San Diego and UX designer based in
-                Los Angeles, CA. currently studying under UCLA's Extension program for UX Design.
+                I’m Irene, a detail-oriented UX designer with a fascination for solving complex problems and structuring digital content.    In my free time, I enjoy strength training, listening to podcasts, and exploring nature and new cultures. 
+                </div>
+              <div class ="about-paragraph2">
+                I believe that my role is to bridge the gap between users and digital systems, and creating intuitive and efficient experiences that help people find what they need quickly and easily. I’m currently building on my skills in information architecture through personal projects and eager to learn from experienced information architects. 
+                </div>
+              <div class ="about-paragraph2">
+                I’m always looking for opportunities to collaborate with other designers and gain feedback on my work. If you’d like to get in touch, I’d love to hear from you!
                 </div>
                 
-              <div class = "about-paragraph2">
-                Because I’m always eager to learn and challenge my limits, my 
-                interests lie within self-development and understanding habit
-                formations. I'm passionate about designing simple, thought-fully crafted
-                solutions that can transform the way people live by helping them
-                overcome barriers and fulfill personal goals.
-                </div>
-
               <div class ="about-paragraph2">
                 <!-- If you'd like to get in touch, you can reach me at:
                 <a class="about-link" href="mailto: irenelue01@gmail.com" target="_blank" title="irenelue01@gmail.com"> irenelue01@gmail.com</a>.
@@ -150,7 +147,9 @@
             </div>
           </div> <!-- Irene Lue section-->
 
+          <!-- gray divider -->
           <hr class="solid" style="margin-top:6%; margin-bottom:6%;">
+
 
           <!-- start: edu / skills -->
           <section id="blog" class="blog">
