updated about and index

--- a/index.html
+++ b/index.html
@@ -26,10 +26,11 @@
 
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;450&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300;400&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Mukta:wght@300;400;500;600&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Amiko:wght@300;400;500;600;650;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Mukta:wght@300;350;400;500;600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Amiko:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@300;400;500;600;650;700&display=swap" rel="stylesheet">
   <link href='http://fonts.googleapis.com/css?family=Lato:400,500,600,700' rel='stylesheet' type='text/css'>
+  <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
 
 
 
@@ -130,8 +131,7 @@
 
       <!-- HEADER ROTATOR REMOVED STARTING HERE -->
       <h3 style="border:white 1px solid;"> 
-      UX designer striving to deliver simple, thought-fully crafted solutions 
-      with the intent to learn, inspire, and improve lives
+      I'm a UX designer designing simple solutions for complex problems with the intent to learn and improve lives
       </h3>
 
       <div class="container" style="margin-left:0px; margin-top:20px;">
@@ -166,7 +166,7 @@
               <div class="image" >
                 <img src="assets/img/proj_bala/cover.png" style="border-radius:10px;" class="img-fluid" alt="">
                 <div class="image_overlay2">
-                    <div class="image_title"> Bala Bangles </div>
+                    <div class="image_title"> Bala Bangles</div>
                     <p class="image_description"> Content Strategy, UX, VD, Concept
                     </p>
                 </div>
@@ -289,22 +289,22 @@
                   </p>
               </div> -->
               <div class="col-lg-4 mb-5 mb-lg-0">
-                  <h6 class="mb-2">Irene Lue</h6>
-                  <h6> UX Designer </h6>
+                  <h6 class="mb-2">IRENE LUE</h6>
+                  <h6> UX DESIGNER </h6>
               </div>
 
               <div class="col-lg-4 mb-5 mb-lg-0">
-                  <h6 class="mb-2"> Los Angeles, CA</h6>
-                  <h6> irenelue01@gmail.com </h6>
+                  <h6 class="mb-2">LOS ANGELES, CA</h6>
+                  <h6> IRENELUE01@GMAIL.COM </h6>
               </div>
 
             
               <!-- Footer Social Icons-->
               <div class="col-lg-4 mb-5 mb-lg-0">
                   <!-- <h4 class="text-uppercase mb-4">Around the Web</h4> -->
-                  <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-linkedin-in"></i></a>
-                  <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw bi-github"></i></a>
-                  <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw bi-instagram"></i></a>
+                  <a class="btn btn-outline-light btn-social mx-1" href="https://www.linkedin.com/in/irenelue/" target="_blank" title="LinkedIn"><i class="fab fa-fw fa-linkedin-in"></i></a>
+                  <a class="btn btn-outline-light btn-social mx-1" href="https://github.com/irenelue" target="_blank" title="GitHub"><i class="fab fa-fw bi-github"></i></a>
+                  <a class="btn btn-outline-light btn-social mx-1" href="https://instagram.com/irenelue" target="_blank" title="Instagram"><i class="fab fa-fw bi-instagram"></i></a>
               </div>
           </div>
       </div>
