--- a/aboutme.html
+++ b/aboutme.html
@@ -119,7 +119,13 @@
               <div class ="about-paragraph2">
                 I’m Irene, a detail-oriented UX designer with a fascination for solving complex problems and structuring digital content.    
                 
-                I believe that my role is to bridge the gap between users and digital systems, and creating intuitive and efficient experiences that help people find what they need quickly and easily. <!-- I’m currently building on my skills in information architecture through personal projects and eager to learn from experienced information architects.  -->
+                I believe that my role is to bridge the gap between users and digital systems by building efficient and user-centered experiences that help people accomplish their goals quickly and easily. 
+
+                </div>
+
+                <div class ="about-paragraph2">
+            
+                Outside of design, I love staying active through strength training and exploring new places. I enjoy seeing things from a fresh perspective and sharing experiences with people who have the same excitement for life.  <!-- I’m currently building on my skills in information architecture through personal projects and eager to learn from experienced information architects.  -->
                 </div>
               <div class ="about-paragraph2">
                 I’m always looking for opportunities to collaborate with other designers and gain feedback on my work. If you’d like to get in touch, I’d love to hear from you!
