--- a/index.html
+++ b/index.html
@@ -131,17 +131,17 @@
 
       <!-- HEADER ROTATOR REMOVED STARTING HERE -->
       <h3 style="border:white 1px solid;"> 
-      I'm a UX designer designing simple solutions for complex problems with the intent to learn and improve lives
+      I'm a UX designer passionate about solving complex problems and designing simple solutions with the intent to learn and improve lives
       </h3>
 
       <div class="container" style="margin-left:0px; margin-top:20px;">
         <div class="row">
 
-          <a class="button-box" href="aboutme.html" target="_blank"> READ MORE </a>
+          <a class="button-box" href="aboutme.html" target="_blank"> Read More </a>
 
           <div class="column" style="width:2%;"></div>
 
-          <a class="button-box" href="https://drive.google.com/file/d/1e1YjK2bktUEod1lXxS5KymU3pvoh2KEI/view?usp=sharing" target="_blank">RESUME</a></li>
+          <a class="button-box" href="https://drive.google.com/file/d/1e1YjK2bktUEod1lXxS5KymU3pvoh2KEI/view?usp=sharing" target="_blank">Resume</a></li>
 
         </div>
       </div>
@@ -162,12 +162,12 @@
 
           <!-- Content Design  -->
           <div class="col-lg-4 col-md-6 portfolio-item" class="img-fluid">
-            <a href="balabangles.html" target="blank">
+            <a href="balabangles.html" target="_blank">
               <div class="image" >
                 <img src="assets/img/proj_bala/cover.png" style="border-radius:10px;" class="img-fluid" alt="">
                 <div class="image_overlay2">
-                    <div class="image_title"> Bala Bangles</div>
-                    <p class="image_description"> Content Strategy, UX, VD, Concept
+                    <div class="image_title"> Content Design for Bala Bangles</div>
+                    <p class="image_description"> <em> ux, content strategy, information architecture </em>
                     </p>
                 </div>
               </div>
