--- a/index.html
+++ b/index.html
@@ -165,9 +165,9 @@
             <a href="balabangles.html" target="_blank">
               <div class="image" >
                 <img src="assets/img/proj_bala/cover.png" style="border-radius:10px;" class="img-fluid" alt="">
-                <div class="image_overlay2">
-                    <div class="image_title"> Content Design for Bala Bangles</div>
-                    <p class="image_description"> <em> ux, content strategy, information architecture </em>
+                <div class="image_overlay">
+                    <div class="image_title"> BALA BANGLES </div>
+                    <p class="image_description"> <em> research, content strategy, ia, prototyping </em>
                     </p>
                 </div>
               </div>
@@ -193,9 +193,9 @@
             <a href="onboarding.html">
               <div class="image" >
                 <img src="assets/img/portfolio/pomolo.png" style="border-radius:10px;" class="img-fluid" alt="">
-                <div class="image_overlay2">
-                    <div class="image_title"> Onboarding With Pomolo </div>
-                    <p class="image_description"> Mobile, UX, VD, Concept
+                <div class="image_overlay">
+                    <div class="image_title"> POMOLO </div>
+                    <p class="image_description"> <em> mobile, concept, ux, visd </em>
                     </p>
                 </div>
               </div>
