--- a/onboarding.html
+++ b/onboarding.html
@@ -1063,8 +1063,9 @@
                   The main lessons I've taken away from this experience include: 
 
                   <ol style="margin-left:15px; margin-top:15px;">
-                    <li> <b style="color: #0E1126; font-weight:450;"> Don't be afraid of user research</b> <br>
-                    Before taking this class, the thought of directing user 
+                    <li> 
+                      <p style="color: #0E1126; font-weight:450;"> Don't be afraid of user research</p> 
+                      <p> Before taking this class, the thought of directing user 
                     interviews was incredibly nerve-wracking.
                     However, at the end of every session,
                     I was consistently reminded of how much I 
@@ -1074,25 +1075,29 @@
                     I found it helpful to view it as a conversation between friends. 
                     Take it from me - to get comfortable
                     at something, you've got to start getting uncomfortable, and the more 
-                    testing you do, the less daunting it'll seem!
+                    testing you do, the less daunting it'll seem! </p>
+                    
                     </li>
 
-                    <li style="margin-top:15px;"> <b style="color: #0E1126; font-weight:450;"> Get to know your users</b> <br>
-                    User research isn't <em> only </em> about improving your designs, 
+                    <li style="margin-top:15px;"> 
+                      <p style="color: #0E1126; font-weight:450;"> Get to know your users</p> 
+                      <p> User research isn't <em> only </em> about improving your designs, 
                     it’s also about getting to know your users! Take this 
                     opportunity to learn about how your users think, understand 
                     where they’re coming from, and remove any biases. Don’t limit 
                     yourself to only focusing on identifying pain points or what 
                     can be done to improve your designs. If you can step into the 
                     mindset of your user, then you'll be able to deliver the best possible 
-                    product to meet their needs. 
+                    product to meet their needs. </p>
+                    
                     </li>
 
-                    <li style="margin-top:15px;"> <b style="color: #0E1126; font-weight:450;"> Keep iterating </b> <br>
-                    Always try out multiple solutions!
+                    <li style="margin-top:15px;"> 
+                      <p style="color: #0E1126; font-weight:450;"> Keep iterating </p> 
+                      <p> Always try out multiple solutions!
                     By consistently refining your work early on, you make critical changes,
                     resolve hidden issues, and ensure your product meets its 
-                    functionality and usability goals.
+                    functionality and usability goals. </p>
                     </li>
                   </ol>  
                 </p>
@@ -1207,7 +1212,7 @@
           </div>
       </div>
   </footer>
-  
+
 <!-- </footer> --> <!-- End Footer commenting out to get rid of that gray shadow line -->
 
     <!-- given for social media links at bottom right corner -->
