--- a/onboarding.html
+++ b/onboarding.html
@@ -107,7 +107,7 @@
 
             <article class="entry entry-single">
               <h2 class="title1">
-                Onboarding With Pomolo
+                Pomolo
               </h2>
 
               <h2 class="subtitle1">
@@ -115,9 +115,9 @@
               </h2>
 
               <h2 class="subtitle2">
-                As a new student under UCLA’s Extension program for UX Design, I
-                was given the task of creating a login and registration feature for a
-                focus tracking app to help students. 
+                For my first solo design project, I created a mobile tracking app called Pomolo which aims to help students with their focus and concentration. This project focuses on building the login and registration feature and understanding how Pomolo can make the experience better over other applications.
+
+
               </h2>
 
 
@@ -129,27 +129,49 @@
 
 
               <!-- DETAILS BEGIN -->
-
               <div class="row" style="width:100%; margin:0px 0px 0px 0vw;">
+
                 <!-- duration -->
-                <div class="case-details">                  
-                  <h2 class="case-details"> TIME <br> <br> - </h2>
-                  <p class="case-details">
+                <div class="case-details" style="width:25%">                  
+                  <h2> DURATION </h2>
+                  <div style="border: 1.5px solid #177add; width:10%; margin-bottom:4%; margin-top:4%;"> </div>
+                  <p>
                     Apr - Jun 2022
                   </p>
                 </div>
+
                 <!-- role -->
-                <div class="case-details">                 
-                  <h2 class="case-details"> ROLE <br> <br> - </h2>
-                  <p class="case-details">                    
-                    User Research, Testing, Prototyping, Visuals
+                <div class="case-details" style="width:25%">                  
+                  <h2> ROLE </h2>
+                  <div style="border: 1.5px solid #177add; width:10%; margin-bottom:4%; margin-top:4%;"> </div>
+                  <p>
+                    Research <br> 
+                    Usability Testing <br>
+                    Iteration <br>
+                    Wireframing <br>
+                    Prototyping
                   </p>
                 </div>
+
                 <!-- type -->
-                <div class="case-details">                  
-                  <h2 class="case-details"> TYPE <br> <br> - </h2>
-                  <p class="case-details">
-                    Mobile App (iOS)
+                <div class="case-details" style="width:25%">                  
+                  <h2> PROJECT </h2>
+                  <div style="border: 1.5px solid #177add; width:10%; margin-bottom:4%; margin-top:4%;"> </div>
+                  <p>
+                    Mobile Design
+                  </p>
+                </div>
+
+                <!-- deck -->
+                <div class="case-details" style="width:25%">                  
+                  <h2> LINKS </h2>
+                  <div style="border: 1.5px solid #177add; width:10%; margin-bottom:4%; margin-top:4%;"> </div>
+                  <p>
+                    <a class="about-link2" href="https://www.figma.com/file/pNdZJegifzSxo6aCrb3F1d/Pomolo%2FLogin%2FFinal?node-id=846%3A7692" target="_blank"> Figma Work </a>
+
+                    <br> 
+
+                    <a class="about-link2" href="https://www.figma.com/proto/pNdZJegifzSxo6aCrb3F1d/Pomolo%2FLogin%2FFinal?node-id=487%3A318&scaling=scale-down&page-id=0%3A1&starting-point-node-id=487%3A318" target="_blank"> View Prototype </a>
                   </p>
                 </div>
 
