--- a/balabangles.html
+++ b/balabangles.html
@@ -203,7 +203,7 @@
 
 									<!-- type -->
 									<div class="case-details" style="width: 25%">
-										<h2>PROJECT</h2>
+										<h2>TYPE</h2>
 										<div
 											style="
 												border: 1.5px solid #f2cc5c;
@@ -227,15 +227,23 @@
 											"
 										></div>
 										<p>
-											<a class="about-link2"
+											<a
+												class="about-link2"
 												href="https://www.figma.com/file/fMRvn3D6iBROx4wTzH25RA/UCLA-UX3---Content_Design?node-id=141%3A3&t=O9goXf0MvpLmS0CH-1"
-												target="_blank"> Figma Work </a>
+												target="_blank"
+											>
+												Figma Work
+											</a>
 
-                        <br>
+											<br />
 
-											<a class="about-link2"
+											<a
+												class="about-link2"
 												href="https://drive.google.com/file/d/1mSbYln3x5S05tsJCRQDv4nKoBvjq8-4A/view?usp=sharing"
-												target="_blank"> Process Deck </a>
+												target="_blank"
+											>
+												Process Deck
+											</a>
 										</p>
 									</div>
 								</div>
