--- a/onboarding.html
+++ b/onboarding.html
@@ -155,7 +155,7 @@
 
                 <!-- type -->
                 <div class="case-details" style="width:25%">                  
-                  <h2> PROJECT </h2>
+                  <h2> TYPE </h2>
                   <div style="border: 1.5px solid #177add; width:10%; margin-bottom:4%; margin-top:4%;"> </div>
                   <p>
                     Mobile Design
