--- a/balabangles.html
+++ b/balabangles.html
@@ -149,9 +149,9 @@
 									As a new student in UCLA's UX Design program, I enrolled in a
 									Content Strategy course to gain a deeper understanding of how
 									to develop effective content strategies for digital platforms.
-									During the course, I was given the task to create a
-									comprehensive content redesign strategy for Bala Bangles to
-									improve their online user engagement and content taxonomy.
+									I was given the task to create a comprehensive content
+									redesign strategy to improve Bala Bangles' online
+									user engagement and content taxonomy.
 								</h2>
 
 								<div
