--- a/onboarding.html
+++ b/onboarding.html
@@ -149,7 +149,8 @@
                     Usability Testing <br>
                     Iteration <br>
                     Wireframing <br>
-                    Prototyping
+                    Prototyping <br>
+                    Visual Design 
                   </p>
                 </div>
 
@@ -208,7 +209,7 @@
                       a positive first impression since it can 
                       be a determining factor of returning users. -->
 
-                      These concerns introduced a new design question - 
+                      These concerns introduced a new design question: 
 
                       <blockquote>
                         <p>
